--- a/WikiLeaks/packages.config
+++ b/WikiLeaks/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net451" />
+  <package id="MimeKit" version="1.8.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
 </packages>
