--- a/WikiLeaks/packages.config
+++ b/WikiLeaks/packages.config
@@ -3,9 +3,7 @@
   <package id="BouncyCastle" version="1.8.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net451" />
-  <package id="Flurl.Http.Signed" version="0.10.1" targetFramework="net451" />
-  <package id="Flurl.Signed" version="2.0.0" targetFramework="net451" />
+  <package id="Microsoft.Composition" version="1.0.30" targetFramework="net451" />
   <package id="MimeKit" version="1.8.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
 </packages>
