--- a/WikiLeaks/WikiLeaks.csproj
+++ b/WikiLeaks/WikiLeaks.csproj
@@ -122,6 +122,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Abstract\ICssStyle.cs" />
     <Compile Include="Enums\SignatureValidation.cs" />
     <Compile Include="Models\Attachment.cs" />
     <Compile Include="Converters\SignatureValidationToColorConverter.cs" />
@@ -151,6 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IMainWindowViewModel.cs" />
+    <Compile Include="Services\ClassHighlighter.cs" />
+    <Compile Include="Services\CssStyle.cs" />
     <Compile Include="Services\Highlighter.cs" />
     <Compile Include="Abstract\IHighlighter.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
