--- a/WikiLeaks/App.config
+++ b/WikiLeaks/App.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="WikiLeaks.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="WikiLeaks.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
@@ -19,9 +16,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <applicationSettings>
+  <userSettings>
     <WikiLeaks.Properties.Settings>
-      <setting name="Website" serializeAs="String">
+      <setting name="Domain" serializeAs="String">
         <value>https://wikileaks.org/</value>
       </setting>
       <setting name="Repository" serializeAs="String">
@@ -30,10 +27,6 @@
       <setting name="Action" serializeAs="String">
         <value>emailid</value>
       </setting>
-    </WikiLeaks.Properties.Settings>
-  </applicationSettings>
-  <userSettings>
-    <WikiLeaks.Properties.Settings>
       <setting name="Top" serializeAs="String">
         <value>100</value>
       </setting>
