Now Caching Emails to C:\ProgramData\Wikileaks\Cache

--- a/WikiLeaks/App.config
+++ b/WikiLeaks/App.config
@@ -45,6 +45,21 @@
       <setting name="DocumentNo" serializeAs="String">
         <value>25000</value>
       </setting>
+      <setting name="StartId" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="EndId" serializeAs="String">
+        <value>35000</value>
+      </setting>
+      <setting name="CacheFolder" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="FilterFolder" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ResultsFolder" serializeAs="String">
+        <value />
+      </setting>
     </WikiLeaks.Properties.Settings>
   </userSettings>
 </configuration>
