Added ability to customize search terms

--- a/WikiLeaks/App.config
+++ b/WikiLeaks/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="WikiLeaks.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WikiLeaks.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
@@ -47,4 +50,38 @@
       </setting>
     </WikiLeaks.Properties.Settings>
   </userSettings>
+  <applicationSettings>
+    <WikiLeaks.Properties.Settings>
+      <setting name="DefaultTerms" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>CVC</string>
+            <string>Clinton</string>
+            <string>Emergency</string>
+            <string>Foundation</string>
+            <string>HRC</string>
+            <string>Health</string>
+            <string>Hillary</string>
+            <string>KSA</string>
+            <string>Login</string>
+            <string>Mills</string>
+            <string>Obama</string>
+            <string>Pagliano</string>
+            <string>Password</string>
+            <string>Podesta</string>
+            <string>Potus</string>
+            <string>Qatar</string>
+            <string>Saudi</string>
+            <string>Soros</string>
+            <string>Striker</string>
+            <string>Turi</string>
+            <string>Urgent</string>
+            <string>Username</string>
+            <string>WJC</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+    </WikiLeaks.Properties.Settings>
+  </applicationSettings>
 </configuration>
