An option to disable highlighting, and a bit cleaner regex.

--- a/WikiLeaks/App.config
+++ b/WikiLeaks/App.config
@@ -63,6 +63,9 @@
       <setting name="ResultsFolder" serializeAs="String">
         <value />
       </setting>
+      <setting name="WillHighlight" serializeAs="String">
+        <value>True</value>
+      </setting>
     </WikiLeaks.Properties.Settings>
   </userSettings>
   <applicationSettings>
