--- a/WikiLeaks/Properties/Settings.settings
+++ b/WikiLeaks/Properties/Settings.settings
@@ -75,5 +75,8 @@
     <Setting Name="SearchTerms" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="WillHighlight" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
