--- a/WikiLeaks/WikiLeaks.csproj
+++ b/WikiLeaks/WikiLeaks.csproj
@@ -150,7 +150,6 @@
     <Compile Include="Enums\SignatureValidation.cs" />
     <Compile Include="Models\Attachment.cs" />
     <Compile Include="Converters\SignatureValidationToColorConverter.cs" />
-    <Compile Include="Models\Highlight.cs" />
     <Compile Include="Services\FolderNames.cs" />
     <Compile Include="Services\EmailCache.cs" />
     <Compile Include="Services\EmailOnline.cs" />
@@ -231,15 +230,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Button Next.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Button Previous.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Refresh.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Wikileaks.png" />
   </ItemGroup>
   <ItemGroup>
@@ -299,6 +289,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Settings-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Highlight.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
