--- a/WikiLeaks/packages.config
+++ b/WikiLeaks/packages.config
@@ -2,10 +2,16 @@
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
-  <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net451" />
-  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net451" />
-  <package id="Microsoft.Composition" version="1.0.30" targetFramework="net451" />
-  <package id="MimeKit" version="1.10.0" targetFramework="net451" />
+  <package id="Extended.Wpf.Toolkit" version="3.1" targetFramework="net451" />
+  <package id="HtmlAgilityPack" version="1.5.1" targetFramework="net451" />
+  <package id="Microsoft.Composition" version="1.0.31" targetFramework="net451" />
+  <package id="MimeKit" version="1.16.2" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.2-beta1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net451" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net451" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net451" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net451" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net451" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net451" />
 </packages>
